--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
+ 
+/* .App {
+  height: 100vh;
+}  */
 
+.heroine{
+  display: flex;
+  gap: 2;
+  padding: 4rem;
+  height: 100vh;
+}
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +49,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
